tests/invalid/runtime/string_repeat_negative.pts
import Io;

function main() : void {
    string s = "ab";
    Io.printLine(s.repeat(-1));
}
